gui/slick/css/style.css
/* ... */
span.any-hd {
    background-color: #2672b6;
    background: repeating-linear-gradient(
        -45deg,
        #2672b6,
        #2672b6 10px,
        #5b990d 10px,
        #5b990d 20px
    );
}

span.Custom {
    background-color: #621993;
}

span.HD {
    background-color: #2672B6;
}

span.HDTV {
    background-color: #2672B6;
}

span.HD720p {
    background-color: #5b990d;
}

span.HD1080p {
    background-color: #2672B6;
}

span.UHD-4K {
    background-color: #7500FF;
}

span.UHD-8K {
    background-color: #410077;
}

span.RawHD {
    background-color: #cd7300;
}

span.RawHDTV {
    background-color: #cd7300;
}

span.SD {
    background-color: #BE2625;
}

span.SDTV {
    background-color: #BE2625;
}

span.SDDVD {
    background-color: #BE2625;
}

span.Any {
    background-color: #666;
}

span.Unknown {
    background-color: #999;
}

span.Proper {
    background-color: #3F7F00;
}

span.false {
    color: #993333;
    /* red */
}

span.true {
    color: #669966;
    /* green */
}

option.flag {
    padding-left: 35px;
    background-repeat: no-repeat;
    background-position: 10px 50%;
}

/* Anime section for editShow */
.bwlWrapper {
    height:auto;
    margin: 0 auto;
}

#Anime {
    clear: both;
    overflow-x: hidden;
    overflow-y: hidden;
    font-size: 14px;
}

#Anime div.component-group-desc {
    float: left;
    width: 165px;
}

#Anime div.component-group-desc p {
    margin-bottom: 0.4em;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0.4em;
    width: 95%;
}

div.blackwhitelist{
    float:left;
    text-align: center;
}

div.blackwhitelist input {
    margin: 5px 0px;
}

div.blackwhitelist.pool select{
    width: 230px;
}

div.blackwhitelist.white select, div.blackwhitelist.black select {
    width: 150px;
}

div.blackwhitelist span {
    display: block;
    text-align: center;
}

div.blackwhitelist.anidb, div.blackwhitelist.manual {
    margin: 7px 0px;
}

/* =======================================================================
bootstrap Overrides
========================================================================== */

body {
    padding-top: 60px;
    overflow-y: scroll;
    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #000;
}

html * {
    outline: 0 !important;
}

input[type="checkbox"] {
    margin: 2px 0px 0px;
    line-height: normal;
}

input[type="radio"] {
    margin: 2px 0px 0px;
    line-height: normal;
}

input, textarea, select, .uneditable-input {
    width: auto;
    color: #000;
}

.container-fluid {
    margin-left: 10px;
    margin-right: 10px;
}

.navbar-brand {
    padding: 0px;
}

/* navbar styling */
.navbar-default .navbar-brand {
    color: #ffffff;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #ffffff;
    background-color: transparent;
}

.navbar-default .navbar-text {
    color: #dddddd;
}

.navbar-default .navbar-nav > li > a {
    color: #dddddd;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #ffffff;
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    color: #ffffff;
    background-color: #333333;
}

.navbar-default .navbar-nav > .disabled > a,
.navbar-default .navbar-nav > .disabled > a:hover,
.navbar-default .navbar-nav > .disabled > a:focus {
    color: #cccccc;
    background-color: transparent;
}

.navbar-default .navbar-toggle {
    border-color: #cccccc;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #333333;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #333333;
}

.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
    background-color: #333333;
    color: #ffffff;
}

.navbar-default .navbar-nav > li.navbar-split > a {
    display: inline-block;
    float: left;
}

.navbar-default .navbar-nav > li.navbar-split > a:first-child {
    padding-right: 8px;
}

.navbar-default .navbar-nav > li.navbar-split > a:nth-child(2) {
    padding-left: 8px;
}

@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #dddddd;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
        color: #ffffff;
        background-color: transparent;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
        color: #ffffff;
        background-color: #333333;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
    .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
        color: #cccccc;
        background-color: transparent;
    }
}

.navbar-default .navbar-link {
    color: #dddddd;
}

.navbar-default .navbar-link:hover {
    color: #ffffff;
}

.navbar-default .btn-link {
    color: #98978b;
}

.navbar-default .btn-link:hover,
.navbar-default .btn-link:focus {
    color: #dddddd;
}

.navbar-default .btn-link[disabled]:hover,
fieldset[disabled] .navbar-default .btn-link:hover,
.navbar-default .btn-link[disabled]:focus,
fieldset[disabled] .navbar-default .btn-link:focus {
    color: #cccccc;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    color: #262626;
    text-decoration: none;
    background-color: #F5F5F5;
}

.dropdown-menu > li > a {
    padding: 4px 36px 4px 20px;
}

.dropdown-menu {
    background-color: #F5F1E4;
    border: 1px solid rgba(0, 0, 0, 0.15);
    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
}

.form-control {
    color: #000000;
}
/* ... */

